fixed side menu scrolling on small devices

--- a/src/app/components/calendar/calendar.component.scss
+++ b/src/app/components/calendar/calendar.component.scss
@@ -92,6 +92,7 @@ section {
         height: 300px;
         visibility: visible;
         opacity: 1;
+        overflow: hidden;
 
         h4 {
             font-size: 28px;
