--- a/src/app/components/months-menu/months-menu.component.scss
+++ b/src/app/components/months-menu/months-menu.component.scss
@@ -15,6 +15,7 @@ $fontFamily : 'nasalization';
   z-index : 0;
   padding-top : 8vh;
   margin-top: 52px;
+  overflow: scroll;
 }
  
 ul {
